infrastructure/kubernetes/how-to/ingress-example.yaml
## 맨날 새로 짜는게 귀찮아서 걍 만듬
apiVersion: v1
kind: Namespace
metadata:
  name: example-iz4blue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: example-iz4blue
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: custom-page
          mountPath: /usr/share/nginx/html
      volumes:
        - name: custom-page
          configMap:
            name: nginx-custom-page
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: example-iz4blue
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-test
  namespace: example-iz4blue
spec:
  ingressClassName: nginx
  rules:
  - host: "test.wnut.co.kr"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
